--- a/application.yml
+++ b/application.yml
@@ -1,11 +1,17 @@
-server:
-  port: 3344
-  
 spring:
-  application:
-    name: microservice-springcloud-server-config
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/1iqueen/microservice-springcloud-server-config.git
+  profiles:
+    active:
+    - dev
+
+
+---
+spring:
+  profiles: dev
+    application: 
+      name: microservice-springcloud-server-config-dev
+
+---
+spring:
+  profiles: test
+    application: 
+      name: microservice-springcloud-server-config-test
