--- a/application.yml
+++ b/application.yml
@@ -2,16 +2,13 @@ spring:
   profiles:
     active:
     - dev
-
-
 ---
 spring:
-  profiles: dev
-    application: 
-      name: microservice-springcloud-server-config-dev
-
+  profiles: dev     #开发环境
+  application: 
+    name: microservice-srpingcloud-config-dev
 ---
 spring:
-  profiles: test
-    application: 
-      name: microservice-springcloud-server-config-test 
+  profiles: test   #测试环境
+  application: 
+    name: microservice-srpingcloud-config-test
